fix username overflow

--- a/assets/stylesheets/user-home-page.css
+++ b/assets/stylesheets/user-home-page.css
@@ -34,6 +34,7 @@
 .user-panel .top .username{
     font-size:1.5rem;
     width:50%;
+    height:2rem;
     overflow:hidden;
     float:left;
     color:#555;
